@@ -25,8 +25,10 @@ dependencies {
 
 	implementation("org.springframework.boot:spring-boot-starter")
 	implementation("org.springframework.boot:spring-boot-starter-amqp")
-	implementation("com.github.rvesse:airline:2.7.2")
+	implementation("com.github.rvesse:airline:2.9.0")
 	implementation(project(":modules:jfc-common"))
+	implementation("com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.17.0")
+//	implementation("javax.inject:javax.inject:1")
 
 	compileOnly("org.projectlombok:lombok")
 
@@ -37,4 +39,5 @@ dependencies {
 
 tasks.withType<Test> {
 	useJUnitPlatform()
+	jvmArgs("-XX:+EnableDynamicAgentLoading")
 }
